<resources>
    <string name="app_name">Catch</string>
    <string name="handle">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="picture">Share your picture (optional):</string>
    <string name="back_button">I already have an account</string>
    <string name="handle_text"></string>
    <string name="tag">Tag</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="preferences">Preferences</string>
    <string name="score">Score</string>
    <string name="save_button">Save</string>
    <string name="clear">Clear</string>
    <string name="confirm">Re-type your password</string>
    <string name="confirm_button">Confirm</string>
    <string name="name_signin">Name</string>
    <string name="pass_signin">Password</string>
    <string name="signin_button">Sign In</string>
    <string name="create">Create a new account</string>
    <string name="clear_text">Clear</string>
    <string name="title">Catching</string>
    <string name="ui_love_picture">Love picture</string>
    <string name="sign_out">Sign out</string>
    <string name="privacy">Privacy</string>
    <string name="alert_setter">Alert</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="signout_button">Signout</string>
    <string name="logout_warning">Are you sure?</string>
    <string name="link_class">http://www.cs.dartmouth.edu/~sergey/cs65/</string>
    <string-array name="Alert">
        <item>Vibrate</item>
        <item>Ring</item>
        <item>No Alert</item>
    </string-array>

</resources>
